--- a/src/com/cp/view/PromotionView.mxml
+++ b/src/com/cp/view/PromotionView.mxml
@@ -6,4 +6,64 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+
+	<s:layout>
+		<s:VerticalLayout paddingBottom="10"
+						  paddingLeft="10"
+						  paddingRight="10"
+						  paddingTop="10"
+						  gap="10"
+						  />
+	</s:layout>
+
+	<s:BorderContainer width="100%"
+					   height="100%"
+					   backgroundColor="#666666"
+					   >
+		<s:Label horizontalCenter="0"
+				 verticalCenter="0"
+				 text="Ad"
+				 />
+	</s:BorderContainer>
+
+	<s:BorderContainer width="100%"
+					   height="100%"
+					   backgroundColor="#666666"
+					   >
+		<s:Label horizontalCenter="0"
+				 verticalCenter="0"
+				 text="Ad"
+				 />
+	</s:BorderContainer>
+
+	<s:BorderContainer width="100%"
+					   height="100%"
+					   backgroundColor="#666666"
+					   >
+		<s:Label horizontalCenter="0"
+				 verticalCenter="0"
+				 text="Ad"
+				 />
+	</s:BorderContainer>
+
+	<s:BorderContainer width="100%"
+					   height="100%"
+					   backgroundColor="#666666"
+					   >
+		<s:Label horizontalCenter="0"
+				 verticalCenter="0"
+				 text="Ad"
+				 />
+	</s:BorderContainer>
+
+	<s:BorderContainer width="100%"
+					   height="100%"
+					   backgroundColor="#666666"
+					   >
+		<s:Label horizontalCenter="0"
+				 verticalCenter="0"
+				 text="Ad"
+				 />
+	</s:BorderContainer>
+
 </s:Group>
